[gd_scene load_steps=8 format=3 uid="uid://c77e2dymkxoks"]

[ext_resource type="Texture2D" uid="uid://boeui5psfp4ua" path="res://TMPTextures/0d.png" id="1_a6rs6"]
[ext_resource type="Script" path="res://Scripts/Panels/people_panel_manager.gd" id="1_jhj0a"]
[ext_resource type="Texture2D" uid="uid://cj7h63jrxqtxv" path="res://Textures/buttonstartowy.png" id="3_3h0uy"]
[ext_resource type="Texture2D" uid="uid://voj86ivxlujo" path="res://Textures/roland_regan.png" id="3_5v28j"]
[ext_resource type="Texture2D" uid="uid://bofdai358ikwm" path="res://Textures/karski.png" id="4_8cd3x"]
[ext_resource type="Texture2D" uid="uid://c0welng44gqer" path="res://Textures/thatcher.png" id="5_s1pcn"]
[ext_resource type="Texture2D" uid="uid://c822gnlxwynqv" path="res://Textures/lem.png" id="7_0lrq8"]

[node name="PeoplePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jhj0a")

[node name="GreatPerson1" type="Sprite2D" parent="."]
position = Vector2(192, 256)
scale = Vector2(1.34896, 4)
texture = ExtResource("1_a6rs6")

[node name="GreatPerson2" type="Sprite2D" parent="."]
position = Vector2(416, 256)
scale = Vector2(1.33333, 4)
texture = ExtResource("1_a6rs6")

[node name="GreatPerson3" type="Sprite2D" parent="."]
position = Vector2(640, 256.479)
scale = Vector2(1.29948, 3.99002)
texture = ExtResource("1_a6rs6")

[node name="GreatPerson4" type="Sprite2D" parent="."]
position = Vector2(864, 256.729)
scale = Vector2(1.34896, 3.98481)
texture = ExtResource("1_a6rs6")

[node name="GreatPerson5" type="Sprite2D" parent="."]
position = Vector2(1088, 256.479)
scale = Vector2(1.34896, 3.99002)
texture = ExtResource("1_a6rs6")

[node name="GreatPersonProgressButton1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 456.0
offset_right = 240.0
offset_bottom = 504.0
texture_normal = ExtResource("3_3h0uy")
ignore_texture_size = true
stretch_mode = 0

[node name="GreatPersonProgressButton2" type="TextureButton" parent="."]
offset_left = 368.0
offset_top = 456.0
offset_right = 464.0
offset_bottom = 504.0
texture_normal = ExtResource("3_3h0uy")
ignore_texture_size = true
stretch_mode = 0

[node name="GreatPersonProgressButton3" type="TextureButton" parent="."]
offset_left = 592.0
offset_top = 456.0
offset_right = 688.0
offset_bottom = 504.0
texture_normal = ExtResource("3_3h0uy")
ignore_texture_size = true
stretch_mode = 0

[node name="GreatPersonProgressButton4" type="TextureButton" parent="."]
offset_left = 816.0
offset_top = 456.0
offset_right = 912.0
offset_bottom = 504.0
texture_normal = ExtResource("3_3h0uy")
ignore_texture_size = true
stretch_mode = 0

[node name="GreatPersonProgressButton5" type="TextureButton" parent="."]
offset_left = 1040.0
offset_top = 456.0
offset_right = 1136.0
offset_bottom = 504.0
texture_normal = ExtResource("3_3h0uy")
ignore_texture_size = true
stretch_mode = 0

[node name="RolandRegan" type="Sprite2D" parent="."]
position = Vector2(193, 128)
texture = ExtResource("3_5v28j")

[node name="Jan Karski" type="Sprite2D" parent="."]
position = Vector2(416, 128)
texture = ExtResource("4_8cd3x")

[node name="Margaret Thatcher" type="Sprite2D" parent="."]
position = Vector2(640, 128)
texture = ExtResource("5_s1pcn")

[node name="Stanis≈Çaw Lem" type="Sprite2D" parent="."]
position = Vector2(864, 128)
texture = ExtResource("7_0lrq8")

[node name="Zbigniew Herbert" type="Sprite2D" parent="."]
position = Vector2(1088, 128)
texture = ExtResource("3_5v28j")

[node name="GreatPersonProgressBar1" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 192.0
offset_right = 256.0
offset_bottom = 448.0
max_value = 99.0
step = 3.0
fill_mode = 2

[node name="GreatPersonProgressBar2" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 192.0
offset_right = 479.0
offset_bottom = 448.0
max_value = 99.0
step = 3.0
fill_mode = 2

[node name="GreatPersonProgressBar3" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 192.0
offset_right = 705.0
offset_bottom = 448.0
max_value = 99.0
step = 3.0
fill_mode = 2

[node name="GreatPersonProgressBar4" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 192.0
offset_right = 927.0
offset_bottom = 448.0
max_value = 99.0
step = 3.0
fill_mode = 2

[node name="GreatPersonProgressBar5" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_top = 192.0
offset_right = 1151.0
offset_bottom = 448.0
max_value = 99.0
step = 3.0
fill_mode = 2

[connection signal="button_down" from="GreatPersonProgressButton1" to="." method="_on_great_person_progress_button_1_down"]
[connection signal="button_down" from="GreatPersonProgressButton2" to="." method="_on_great_person_progress_button_2_down"]
[connection signal="button_down" from="GreatPersonProgressButton3" to="." method="_on_great_person_progress_button_3_down"]
[connection signal="button_down" from="GreatPersonProgressButton4" to="." method="_on_great_person_progress_button_4_down"]
[connection signal="button_down" from="GreatPersonProgressButton5" to="." method="_on_great_person_progress_button_5_down"]
